[gd_scene format=3 uid="uid://cn6dpvpbdum4h"]

[ext_resource type="Script" uid="uid://ci3mfed813t1j" path="res://scenes/lobby/lobby.gd" id="1_ej4tk"]
[ext_resource type="PackedScene" uid="uid://c7ns3egbmiyk" path="res://ui/components/match_modal/match_modal.tscn" id="3_mlusu"]

[sub_resource type="BoxShape3D" id="BoxShape3D_7dm0k"]
size = Vector3(30, 1, 30)

[sub_resource type="BoxMesh" id="BoxMesh_ig7tw"]
size = Vector3(30, 1, 30)

[sub_resource type="BoxShape3D" id="BoxShape3D_ej4tk"]
size = Vector3(0.098082274, 3.8, 1.15)

[sub_resource type="BoxShape3D" id="BoxShape3D_oe8ih"]

[node name="Lobby" type="Node3D" unique_id=1443995128]
script = ExtResource("1_ej4tk")

[node name="StaticBody3D" type="StaticBody3D" parent="." unique_id=220961157]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D" unique_id=1958463130]
shape = SubResource("BoxShape3D_7dm0k")

[node name="MeshInstance3D" type="MeshInstance3D" parent="StaticBody3D" unique_id=1895831846]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2.3841858e-07, 0)
mesh = SubResource("BoxMesh_ig7tw")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="." unique_id=1990963203]
transform = Transform3D(0.79346687, -0.34397587, 0.50208664, -0.29577014, 0.5030646, 0.8120629, -0.53191197, -0.7928473, 0.29742724, 0, 9.594474, 26.562931)
shadow_enabled = true

[node name="CSGBox3D" type="CSGBox3D" parent="." unique_id=645319947]
transform = Transform3D(29.765282, 0, 0, 0, 1.2155757, 0, 0, 0, 0.16564731, -0.021139145, 1.812588, -14.901383)
use_collision = true
size = Vector3(1.01, 3.8, 1.15)

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="CSGBox3D" unique_id=2042005705]
transform = Transform3D(0.097766854, 0, 0, 0, -0.0070304843, -6.3170657, 0, 3.171394, -0.754129, 0.0015120152, -1.8619723, 0.86525726)
operation = 2
calculate_tangents = false
use_collision = true
sides = 18

[node name="StaticBody3D" type="StaticBody3D" parent="CSGBox3D" unique_id=425566911]

[node name="CollisionShape3D" type="CollisionShape3D" parent="CSGBox3D/StaticBody3D" unique_id=1723189021]
transform = Transform3D(1, 0, 0, 0, 1.0000019, 0, 0, 0, 1.0000001, 0.0017292373, 0, -0.03540039)
shape = SubResource("BoxShape3D_ej4tk")

[node name="CSGBox3D2" type="CSGBox3D" parent="." unique_id=1339654665]
transform = Transform3D(29.765282, 0, 0, 0, 1.2155757, 0, 0, 0, 0.16564731, -0.021139145, 1.812588, -14.901383)
use_collision = true
size = Vector3(1.01, 3.8, 1.15)

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="CSGBox3D2" unique_id=1941040085]
transform = Transform3D(0.097766854, 0, 0, 0, -0.0070304843, -6.3170657, 0, 3.171394, -0.754129, 0.0015120152, -1.8619723, 0.86525726)
operation = 2
calculate_tangents = false
use_collision = true
sides = 18

[node name="StaticBody3D" type="StaticBody3D" parent="CSGBox3D2" unique_id=1552927416]

[node name="CollisionShape3D" type="CollisionShape3D" parent="CSGBox3D2/StaticBody3D" unique_id=1551296333]
transform = Transform3D(1, 0, 0, 0, 1.0000019, 0, 0, 0, 1.0000001, 0.0017292373, 0, -0.03540039)
shape = SubResource("BoxShape3D_ej4tk")

[node name="Multiplayer_options" type="Area3D" parent="." unique_id=1665188832]
transform = Transform3D(2.9060411, 0, 0, 0, 3.2177184, 0, 0, 0, 1.3611405, 0, 0, -14.018775)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Multiplayer_options" unique_id=213932883]
shape = SubResource("BoxShape3D_oe8ih")

[node name="MatchModal" parent="Multiplayer_options" unique_id=951790681 instance=ExtResource("3_mlusu")]

[node name="CSGBox3D3" type="CSGBox3D" parent="." unique_id=705176588]
transform = Transform3D(-1.3010817e-06, 0, 0.16564731, 0, 1.2155757, 0, -29.765282, 0, -7.240674e-09, -14.882582, 1.812588, 0.010302067)
use_collision = true
size = Vector3(1.01, 3.8, 1.15)

[node name="CSGBox3D4" type="CSGBox3D" parent="." unique_id=1695862830]
transform = Transform3D(-1.3010817e-06, 0, 0.16564731, 0, 1.2155757, 0, -29.765282, 0, -7.240674e-09, 14.900326, 1.812588, 0.010302067)
use_collision = true
size = Vector3(1.01, 3.8, 1.15)

[node name="StaticBody3D2" type="StaticBody3D" parent="." unique_id=1485214349]
transform = Transform3D(-4.371137e-08, 0, 25.994045, 0, 1, 0, -0.9999996, 0, -1.1362357e-06, 0, 1.5239866, 14.98885)

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D2" unique_id=20632480]
transform = Transform3D(1, 0, 0, 0, 1.0000019, 0, 0, 0, 1.0000001, 0, 0, 0)
shape = SubResource("BoxShape3D_ej4tk")

[connection signal="body_entered" from="Multiplayer_options" to="." method="_on_multiplayer_options_body_entered"]
[connection signal="body_exited" from="Multiplayer_options" to="." method="_on_multiplayer_options_body_exited"]
